<resources>
    <string name="app_name">Te Hiringa O Te Reo</string>
    <string name="aboutText"><b>Te Hiringa o Te Reo</b> is a language \nresource designed specifically for those who are interested in learning basic Māori language but have limited opportunities to attend regular language classes. 
    \n\nFrom this basic understanding of te reo Māori participants can then decide to enrol on a part/full time language programme.
    </string>
    <string name="guidelinesText">Before you begin this reo Māori (Māori language) course please become \nfamiliar with the content of the <b>Intro</b> section and revisit it often throughout the course.</string>
    <string name="mihiTitle">Mihi</string>
    <string name="mihiText">A greeting and welcome to you from the Ngāti Toa iwi, who are the tangata whenua of the Porirua area, where this course was developed.</string>
    <string name="openingKarakiaTitle">Opening Karakia</string>
    <string name="openingKarakiaText">A prayer for the commencement of this course and lessons. It is recommended that you recite this prayer before you commence each lesson.</string>
    <string name="waiataTitle">Waiata</string>
    <string name="waiataText">Te Hiringa o Te Reo song for this course.</string>
    <string name="closingKarakiaTitle">Closing Karakia</string>
    <string name="closingKarakiaText">A prayer for the completion of this course and each lesson.   When finished for the day, it is recommended that you recite this closing prayer.</string>
    <string name="teWahangaTustahiTitle">Te Wāhanga Tuatahi</string>
    <string name="teWahangaTustahiText">This is the \'first part\' of a four-part course each made up of five lessons (one lesson for each weekday).</string>
    <string name="teWahangaTuaruaTitle">Te Wāhanga Tuarua</string>
    <string name="tewahangaTuaruaText">This is the \'second part\' of a four-part course each made up of five lessons (one lesson for each weekday).</string>
    <string name="teWahangaTuatoruTitle">Te Wāhanga Tuatoru</string>
    <string name="teWahangaTuatoruText">This is the \'third part\' of a four-part course each made up of five lessons (one lesson for each weekday).</string>
    <string name="teWahangaTuawhaTitle">Te Wāhanga Tuawha</string>
    <string name="teWahangaTuawhaText">This is the \'last part\' of a four-part course each made up of five lessons (one lesson for each weekday).</string>
    <string name="eachLessonTitle">Each lesson provides</string>
    <string name="eachLessonText">Ngā Whāinga Akoranga (Learning Outcomes)
\n
    •  He Whakamārama(Explanation)
  \n  •  Ngā Kupu Hou(New Words)
    \n•  Whakarongo – Kōrero (Listen – Speak)
    \n•  Hei Mahi (Exercises)


    \n\nThis language course makes use of text and audio for learning and interactive exercises to complete each lesson stage.\n</string>
    <string name="furtherStudyTitle">Further Study</string>
    <string name="furtherStudyText">http://www.whitireia.ac.nz/AreasOfInterest/Te-Reo-Maori/Pages/TeReoMaori.aspx</string>
    <string name="ExplanationTitle1">NGA WHAINGA AKORANGA</string>
    <string name="ExplanationL1D1Part1">You will be able to greet one person,two people and more and you will learn how to reply to a greeting.</string>
    <string name="ExplanationTitle2">HE WHAKAMARAMA</string>
    <string name="ExplanationL1D1Part2">Greeting and finding out who someone is and where they are from are important in the interaction between people.
        Who you are and where you come from is usually starting point of conversations amongst many Māori as they begin to establish the kinship
        relationship between each other.Te Hiringa O Te Reo will begin by examining the patterns and structures that enable dialogue for this interaction. </string>
    <string name="ExplanationTitle3">HE WHAKAMARAMA ANŌ</string>
    <string name="ExplanationTitle4">HE KÖRERORERO</string>
    <string name="ExplanationL1D1Part3">In te reo, there are 5 vowels. A E I O and U. These can be said as long sounds and short sounds. When written, the long sounding vowel can be written in two ways.\n
                \n  \ \ 1.	aa \ \   \ \     ee   \ \   \ \   	ii   \ \ \ \    	oo    \ \  \ \  	uu\n
                  2.	ā \ \  \ \  \ \   \ \ 	ē \ \  \ \  \ \  \ \ 	ī  \ \ \ \  \ \  \ \ 	ō  \  \ \ \  \ \  \ \ 	ū\n

       \n Either as two vowels or with a macron (a small line over the top of the vowel that is long)\nThe idea is to be consistent with which one you choose to use and not to inter-mix the 2.\nWhen addressing people, names that are two syllables or less, use ‘e’ in front of the name.\nUsually the word koro is used to address an elderly man; kui is used to address an elderly woman, tama to address a young man or boy and hine to address a young woman or girl.\nMā includes another or others with the person greeted.
    </string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_guidelines">Guidelines</string>
    <string name="openKarakia">He hōnore, he korōria ki te atua, \n he maungarongo ki te whenua, \n he whakaaro pai ki\n ngā tāngata katoa. \n Hangāia e te atua he ngākau hou\n ki roto ki tēnā ki tēnā o mātou. \n Whakatōngia tō wairua tapu \n hei āwhina hei tohutohu i a mātou, \n hei ako hoki i ngā kupu \n ki roto i tēnei wānanga Māori. \n\n Āmine</string>
    <string name="closeKarakia">Kia tau ki a tātou katoa\n Te atawhai o tō tātou ariki\n a Ihu Karaiti\n Me te aroha o te Atua\n Me te whiwhinga tahitanga\n Ki te wairua tapu\n Ake, ake, ake Āmine</string>
    <string name="title_activity_day1_lesson1">Day1Lesson1Activity</string>
    <string name="Day1_1d">Hei mihi ki te tangata kotahi</string>
    <string name="Day1_1de">Greetings, one person</string>
    <string name="Day1_1e">Tēnā koe</string>
    <string name="Day1_1ee">Hello</string>
    <string name="Day1_1f">Tēnā rā koe</string>
    <string name="Day1_1fe">Hello, greetings to you</string>
    <string name="Day1_1g">Tēnā koe Piripi</string>
    <string name="Day1_1ge">Hello, Piripi</string>
    <string name="Day1_1h">Tēnā koe e Ora</string>
    <string name="Day1_1he">Hello Ora</string>
    <string name="Day1_1i">Tēnā koe e Aroha    </string>
    <string name="Day1_1ie">Hello Aroha</string>
    <string name="Day1_1j">Tēnā koe e Ani</string>
    <string name="Day1_1je">Hello Ani</string>
    <string name="Day1_1k">Hei mihi ki te tokorua </string>
    <string name="Day1_1ke">Greeting two people</string>
    <string name="Day1_1l">Tēnā kōrua  </string>
    <string name="Day1_1le">Hello, greetings to you(two)</string>
    <string name="Day1_1m">Tēnā (rā) kōrua</string>
    <string name="Day1_1me">Hello, greetings to you(all)</string>
    <string name="Day1_1n">Tēnā kōrua, e hoa mā    </string>
    <string name="Day1_1ne">Greetings to you, friends</string>
    <string name="Day1_1o">Tēnā kōrua Piripi mā    </string>
    <string name="Day1_1oe">Greetings to you Piripi and friend</string>
    <string name="Day1_1p">Tēnā kōrua Piripi kōrua ko Ora</string>
    <string name="Day1_1pe">Greetings to you Piripi and    Ora</string>
    <string name="Day1_1q">Tēnā kōrua Aroha kōrua ko Tame</string>
    <string name="Day1_1qe">Greetings to you Aroha and Tame</string>
    <string name="Day1_1r">Hei mihi ki te tokomaha </string>
    <string name="Day1_1re">Greeting more than two people</string>
    <string name="Day1_1s">Tēnā koutou </string>
    <string name="Day1_1se">Hello, greetings to you (3 or more people)</string>
    <string name="Day1_2a">Tangata</string>
    <string name="Day1_2ae">person/man</string>
    <string name="Day1_2b">Tāngata </string>
    <string name="Day1_2be">people</string>
    <string name="Day1_2c">Wahine</string>
    <string name="Day1_2ce">woman</string>
    <string name="Day1_2d">Wāhine</string>
    <string name="Day1_2de">women</string>
    <string name="Day1_2f">Whakarongo</string>
    <string name="Day1_2fe">listen</string>
    <string name="Day1_2g">Kōrero</string>
    <string name="Day1_2ge">speak</string>
    <string name="Day1_2h">Mihi    </string>
    <string name="Day1_2he">greet</string>
    <string name="Day1_2i">Koe</string>
    <string name="Day1_2ie">you</string>
    <string name="Day1_2j">Kōrua</string>
    <string name="Day1_2je">you two</string>
    <string name="Day1_2k">Koutou</string>
    <string name="Day1_2ke">you, more than 2</string>
    <string name="Day1_2l">Whānau</string>
    <string name="Day1_2le">family</string>
    <string name="Day1_2m">Rangatira</string>
    <string name="Day1_2me">chiefly person</string>
    <string name="Day1_2n">Whanaunga</string>
    <string name="Day1_2ne">relation</string>
    <string name="Day1_2o">Tāne    </string>
    <string name="Day1_2oe">man/men</string>
    <string name="Day1_2p">Tokomaha</string>
    <string name="Day1_2pe">many (people)</string>
    <string name="Day1_2q">Tukuruatia</string>
    <string name="Day1_2qe">repeat</string>
    <string name="Day1_2r">Tokorua</string>
    <string name="Day1_2re">two people</string>
    <string name="ExplanationL1D2Part1">In this section you will learn how to ask a person how she/he/they is/are. You will also learn a little on how to use the pronouns, <b>tāua</b>, <b>tātou</b>, <b>māua</b>, <b>mātou</b>, <b>rāua</b>, <b>rātou</b> in a reply.</string>
    <string name="ExplanationL1D2Part2">See the table below. Do not be too concerned with learning this off  by heart right now, it is only important to get the understanding for the reply to asking someone how they are, 1 person, 2 people, 3 or more – a group.</string>
    <string name="ExplanationL1D2Part3">Tātaki/tauītanga\n\nTautahi tāpiti\n(first person, inclusive)\n\nTautahi tāporo\n(first person, exclusive)\n\nTaurua\n(second person)\n\nTakitahi\nSingular,1 person\n\nAhau/au\n(I/me)\n\nTakirua\nDual,2 people\n\nTāua(ahau + koe)\n we 2, you + I\n\nMāua(ahau + ia)\nwe 2, he/she + I\n\nTakitoru\nPlural, \n3 or more people\n\nTātou(ahau + koe + koe…)\nwe all, including\n\nMātou(ahau + ia + ia + ia…)\nwe all, but not you\n\n<b>Kei te pēhea koe?</b> – How are you?\n<b>Kei te pai ahau.</b> – I am fine.\n<b>Kei te pēhea kōrua?</b> – How are you 2?\n<b>Kei te pai māua.</b> – We are fine. (2)\n<b>Kei te pēhea koutou?</b> – How are you (more than 3)\n<b>Kei te pai mātou.</b> – We are fine. (2+)

    </string>
    <string name="ExplanationL1D2Part4">Te reo Māori is very specific when talking about people. As in the table above you see that there are different words for “we” inclusive and for “we” exclusive. All of this means is that when you use the words, māua, mātou, tāua and tātou, the listeners know who is being included in the conversation and who is not being included – (excluded).
    </string>
    <string name="ExplanationL1D2Part5"><b>Kei te pēhea koe e Tama?</b>\nHow are you Tama? </string>
    <string name="ExplanationL1D2Part6"><b>Kei te pai ahau.</b>\nI’m fine thanks</string>
    <string name="ExplanationL1D2Part7"><b>Kei te pēhea koe e Hoani?</b>\nHow are you Hoani?</string>
    <string name="ExplanationL1D2Part8"><b>Kei te pai ahau</b>\nI am fine thanks</string>
    <string name="dialog_congrats">Congratulations!</string>
    <string name="dialog_congrats2">You have upgraded to great,\nkeep going.</string>
    <string name="dialog_congrats3">Got it!</string>
    <string name="dialog_notOpened">Ops!</string>
    <string name="dialog_notOpened2">You need to achieve 80% mark of last level to access new level</string>
    <string name="listenTopicTitle">Listen-Speak</string>
    <string name="newWordsTopicTitle">New Words</string>
    <string name="playGameTopicTitle">Play Game</string>
    <string name="nextSectionBtn_text">Next Section</string>
    <string name="voicePage_openingKarakiaTitle">Opening Karakia</string>
    <string name="voicePage_closingKarakiaTitle">Closing Karakia</string>
    <string name="voicePage_waiataTitle">Waiata</string>
    <string name="voicePage_prayer">prayer</string>
    <string name="voicePage_song">song</string>
</resources>