<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pupbox_background_color">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/defaultpage_gotlevel3_pic"
        android:layout_gravity="center"
        android:layout_marginTop="34dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_congrats"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_congrats2"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btn_closeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_congrats3"
        android:background="@drawable/border_maori_box"
        android:drawableLeft="@drawable/defaultpage_gotit_icon"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:drawablePadding="16dp"
        android:textColor="@color/maori_word_color"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="34dp"/>


</LinearLayout>