<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blankBackground"
    android:orientation="vertical"
    tools:context=".Topic_listenSpeak">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/listenpage_listen_icon"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:text="@string/listenTopicTitle"
            android:textColor="@color/maori_word_color"
            android:textSize="@dimen/headingText"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.constraint.ConstraintLayout>


    <ListView
        android:id="@+id/list_listenSpeakContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0dp" />

    <LinearLayout
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@drawable/listen_nextbtn_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:text="@string/nextSectionBtn_text"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:src="@drawable/explannationpage_next_icon" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:src="@drawable/listenpage_newword_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/newWordsTopicTitle"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>



